# privatim

./: .codecov.yml  .coveragerc  .gitignore  .jshintrc  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  development.ini.example  entrypoint.sh  i18n.sh  lint.sh  makefile  mypy.sh  privatim.wsgi  production.ini  pyproject.toml  requirements.txt  run.sh  scratch_datetime_setter.js  setup.cfg  test_requirements.txt  testing.ini  tests_requirements.txt  user_delete_story.txt
.github/workflows/: docker-publish.yml  tests.yml
files/assets/: 46fb50fa-13f9-4fe7-a3b3-bdc7fee676ad.metadata.json  c0312f94-96c1-473f-bb9e-0fd49cc15e33.metadata.json
requirements/: compile.sh  test.in
src/: atoz.py  fliestorage_download.py
src/privatim/: __init__.py  cache.py  controls.py  data_table.py  file.py  flash.py  fliestorage_download.py  git_info.py  helpers.py  html.py  mtan_tool.py  pshell.py  routes.py  security.py  security_policy.py  testing.py  tweens.py  types.py  utils.py
src/privatim/alembic/: env.py
src/privatim/cli/: __init__.py  add_content.py  add_meeting.py  add_user.py  apply_data_retention_policy.py  cleanup_duplicates.py  delete_meetings.py  find_files.py  helpers.py  initialize_db.py  migrate_profile_pic.py  print_agenda_items.py  print_trees.py  reindex.py  shell.py  transfer_data.py  upgrade.py  user.py
src/privatim/controls/: controls.py
src/privatim/file/: setup.py
src/privatim/forms/: add_comment.py  agenda_item_form.py  common.py  constants.py  consultation_form.py  core.py  fields.py  filter_form.py  meeting_form.py  search_form.py  types.py  user_form.py  validators.py  widgets.py  working_group_forms.py
src/privatim/forms/fields/: __init__.py  fields.py  (+2 more)
src/privatim/i18n/: __init__.py  core.py  locale_negotiator.py  translation_string.py
src/privatim/layouts/: __init__.py  action_menu.pt  action_menu.py  flash.pt  flash.py  footer.pt  footer.py  layout.pt  layout.py  macros.pt  navbar.pt  navbar.py
src/privatim/locale/: privatim.pot
src/privatim/mail/: __init__.py  exceptions.py  interfaces.py  mailer.py  types.py
src/privatim/models/: __init__.py  associated_file.py  association.py  association_tables.py  attached_document.py  comment.py  commentable.py  consolutation.py  consultation.py  file.py  group.py  markup_text_type.py  meeting.py  mymodel.py  password_change_token.py  profile_pic.py  root.py  searchable.py  soft_delete.py  statement.py  tan.py  user.py  utils.py  working_group.py
src/privatim/mypy/: zope.py
src/privatim/orm/: __init__.py  abstract.py  associable.py  markup_text_type.py  meta.py  session.py  utcdatetime_type.py  utils.py  uuid_type.py
src/privatim/pyavatar/: __init__.py
src/privatim/reporting/: report.css  report.py
src/privatim/route_factories/: __init__.py  root_factory.py  uuid_factory.py
src/privatim/scripts/: initialize_db.py
src/privatim/sms/: datamanager.py  delivery.py  interfaces.py  logger.py  sms_gateway.py  tricks.py  watchmedo.py
src/privatim/static/: __init__.py  report.css
src/privatim/views/: __init__.py  activities.py  agenda_items.py  comment.py  consultation.py  consultations.py  forbidden.py  general_file.py  home.py  login.py  logout.py  meetings.py  mtan.py  password_change.py  password_retrieval.py  people.py  profile.py  search.py  trash.py  utils.py  working_groups.py
src/privatim/wtform/: validators.py
src/pyavatar/: __init__.py
src/subscribers/: __init__.py  csp_header.py
stubs/pyramid/: asset.pyi  authorization.pyi  csrf.pyi  events.pyi  exceptions.pyi  httpexceptions.pyi  i18n.pyi  interfaces.pyi  paster.pyi  path.pyi  registry.pyi  renderers.pyi  response.pyi  scripting.pyi  security.pyi  settings.pyi  testing.pyi
stubs/pyramid/config/: __init__.pyi  adapters.pyi  factories.pyi  i18n.pyi  predicates.pyi  rendering.pyi  routes.pyi  security.pyi  settings.pyi  testing.pyi  views.pyi
stubs/pyramid_layout/: __init__.pyi  interfaces.pyi  layout.pyi  panel.pyi
stubs/transaction/: interfaces.pyi
stubs/zope/interface/: __init__.pyi  adapter.pyi  advice.pyi  declarations.pyi  document.pyi  exceptions.pyi  interface.pyi  interfaces.pyi  registry.pyi  ro.pyi  verify.pyi
stubs/zope/sqlalchemy/: __init__.pyi  datamanager.pyi
tests/: conftest.py  test_cache.py  test_data_table.py  test_mailer.py  test_mtan_tool.py  test_utils.py  test_uuid_factory.py
tests/browser/: test_smoke.py
tests/cli/: test_cli.py  test_data_retention_policy.py  test_upgrade.py  test_user_delete.py
tests/e2e/: conftest.py  test_browser.py
tests/fixtures/: e2e.ini
tests/form/: test_fields.py
tests/forms/: test_forms_consultation.py  test_forms_meeting.py
tests/forms/fields/: test_phone_number.py
tests/functional/: test_views_working_group.py
tests/i18n/: test_core.py  test_locale_negotiator.py  test_translation_string.py
tests/models/: test_commentable.py  test_consultations.py  test_flatten_comments.py  test_group.py  test_meetings.py  test_searchable_mixin.py  test_statement.py  test_user.py  test_utils.py
tests/orm/: test_global_filter.py
tests/reporting/: test_report.py
tests/shared/: client.py  dummy_request_with_user.py  fixtures.py  utils.py
tests/sms/: conftest.py  test_datamanager.py  test_delivery.py  test_sms_gateway.py  test_testing.py  test_tricks.py
tests/subscribers/: test_csp_header.py
tests/test_files/: Spielplan.docx
tests/views/: test_views_consultation.py  test_views_working_group.py
tests/views/browser/: test_views_consultation.py  test_views_working_group.py
tests/views/client/: __init__.py  test_docker.py  test_logout.py  test_search.py  test_views_comments.py  test_views_consultation.py  test_views_homepage.py  test_views_login.py  test_views_meeting.py  test_views_profile.py  test_views_working_group.py  utils.py
tests/views/no_browser/: test_consultation.py
tests/views/without_client/: __init__.py  test_comments.py  test_meeting_view.py  test_mtan.py  test_mtan_setup.py  test_password_change.py  test_password_retrieval.py  test_user_view.py  test_views_agenda_items.py  test_views_consultation.py  test_views_meeting.py
(+64 files in other folders)
