[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ['src/privatim/cli/transfer_data.py']

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".git",
    ".*",
    "_*",
]
markers = [
    "browser: mark test as a browser test using Playwright"
]

[tool.coverage.run]
source = ["privatim"]
omit = [
    "privatim/pshell.py",
    "privatim/types.py",
    "privatim/*/types.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: unreachable",
    "assert_never[(]",
    "@overload",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__."
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
namespace_packages = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
exclude = "/(static/.+)/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "plaster.*",
    "pyramid.*",
    "pyramid.i18n.*",
    "pyramid_beaker.*",
    "pyramid_layout.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
