[metadata]
name = privatim
version = attr: privatim.__version__
description = Privatim
long_description = file: README.md, CHANGES.md
author = Seantis GmbH
author_email = info@seantis.ch
url = https://github.com/seantis/privatim
keywords = web pyramid pylons
classifiers=
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
include_package_data = True
zip_safe = False
packages =
    privatim
package_dir =
    = src
python_requires = >= 3.10
install_requires =
    alembic
    arrow
    bcrypt
    Babel
    bleach
    click
    daemons
    email_validator
    humanize
    html2text
    fanstatic
    fasteners
    Markdown
    markupsafe
    nh3
    pdftotext
    phonenumberslite
    pyramid
    pyramid_beaker
    pyramid_chameleon
    pyramid_debugtoolbar
    pyramid_layout
    pyramid_tm
    pyramid_retry
    python-magic
    Pillow
    sentry_sdk
    sedate
    SQLAlchemy
    sqlalchemy-file
    sqlalchemy-utils
    psycopg2
    sqlalchemy-file
    typing_extensions
    WebOb
    waitress
    watchdog[watchmedo]
    weasyprint==62.3
    WTForms
    werkzeug
    plaster_pastedeploy
    transaction
    zope.sqlalchemy
    zope.deprecation
    zope.event
    zope.interface
    zope.schema
    zope.sqlalchemy

[options.package_data]
privatim =
    py.typed

[options.entry_points]
paste.app_factory =
    main = privatim:main

fanstatic.libraries =
    privatim:js = privatim.static:js_library
    privatim:css = privatim.static:css_library

console_scripts =
    add_user = privatim.cli.user:add_user
    # delete_user = privatim.cli.user:delete_user
    initialize_db = privatim.cli.initialize_db:main
    add_content = privatim.cli.add_content:main
    add_meeting = privatim.cli.add_meeting:main
    delete_meetings = privatim.cli.delete_meetings:main
    upgrade = privatim.cli.upgrade:upgrade
    print_tsvectors =  privatim.cli.helpers:print_tsvectors
    print_text =  privatim.cli.helpers:print_text
    reindex =  privatim.cli.helpers:reindex
    shell = privatim.cli.shell:shell
    deliver_sms = privatim.sms.delivery:main
    watchmedo_daemon = privatim.sms.watchmedo:daemon

[options.extras_require]
mypy =
    mypy==1.10.1
    mypy_zope>1.0.0
    lxml-stubs
    types-babel
    types-fanstatic
    types-requests
    types-setuptools
    types-translationstring
    types-WebOb
    types-WTForms
    types-polib
    types-psycopg2
    types-pytz

test =
    bandit[toml]
    flake8
    flake8-bugbear
    freezegun
    hypothesis
    pypdf
    pytest
    pytest-cov
    pytest-codecov
    pytest-postgresql
    pytest-xdist
    pytest-sugar
    pyquery
    WebTest


[flake8]
extend-select = B901, B903, B904, B908, TC2
per_file_ignores =
    *.pyi: E301, E302, E305, E501, E701, F401, F403, F405, F822, TC, NQA102
    tests/**.py: NQA104, TC
noqa-require-code = true
type-checking-sqlalchemy-enabled = true
